# dynamodb-example-rust

./: .gitignore  Cargo.toml  package-lock.json  package.json
src/: main.rs
