[package]
name = "dynamodb-example-rust"
version = "0.1.0"
authors = ["nakamurus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.4-alpha", package = "aws-sdk-dynamodb" }
tokio = { version = "1", features = ["full"] }